update GetEvent api
